--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,13 +8,13 @@
     </div>
 
     <div class="col-xl-3">
-      <app-stats-widget16 class="card bg-primary hoverable card-xl-stretch mb-xl-8" color="primary" iconColor="white"
-        title="Credit Sales"></app-stats-widget16>
+      <app-stats-widget5 class="card bg-primary hoverable card-xl-stretch mb-xl-8" color="primary" iconColor="white"
+        title="Credit Sales"></app-stats-widget5>
     </div>
 
     <div class="col-xl-3">
-      <app-stats-widget17 class="card bg-success hoverable card-xl-stretch mb-5 mb-xl-8" color="success"
-        iconColor="white" title="Credit Payment"></app-stats-widget17>
+      <app-stats-widget5 class="card bg-success hoverable card-xl-stretch mb-xl-8" color="success"
+        iconColor="white" title="Credit Payment"></app-stats-widget5>
     </div>
   </div>
   <!-- end::Row -->
